# crypto_dashboard

./: .env.sample  .gitignore  interactive_entity_test.py  interactive_trader.py  pyproject.toml
src/crypto_dashboard/: binance.py  config.json  exchange_base.py  exchange_coordinator.py  exchange_utils.py  generic_exchange.py  hash_password.py  index.html  login.html  main.py  nlptrade.py  protocols.py  script.js  secrets.json.sample  style.css  upbit.py
src/crypto_dashboard/frontend/: index.html  login.html  script.js  style.css
src/crypto_dashboard/frontend/modules/: main.js
src/crypto_dashboard/frontend/modules/data/: data_store.js
src/crypto_dashboard/frontend/modules/event/: event_handlers.js
src/crypto_dashboard/frontend/modules/ui/: crypto_card.js  log_manager.js  modal_manager.js  order_manager.js  tab_manager.js  ui_manager.js
src/crypto_dashboard/frontend/modules/utils/: utils.js
src/crypto_dashboard/frontend/modules/websocket/: websocket.js
src/crypto_dashboard/models/: trade_models.py
src/crypto_dashboard/utils/: auth.py  broadcast.py  server_lifecycle.py  text_utils.py  web_handlers.py
src/crypto_dashboard/utils/exchange/: __init__.py  balance_manager.py  event_handler.py  exchange_factory.py  exchange_utils.py  nlp_trade_manager.py  order_manager.py  price_manager.py
src/crypto_dashboard/utils/nlp/: entity_extractor.py  trade_command_parser.py  trade_executor.py
tests/: test_main.py
tests/utils/exchange/: test_balance_manager.py  test_order_manager.py
tests/utils/nlp/: test_entity_extractor.py  test_trade_command_parser.py
