[project]
name = "crypto-dashboard"
version = "0.1.0"
description = ""
authors = [
    {name = "Jinho",email = "jjh2811@naver.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.12.15",
    "ccxt>=4.4.99",
    "cryptography>=45.0.6",
    "pyjwt>=2.10.1",
    "websockets>=15.0.1",
    "bcrypt>=4.0.0",
]

[tool.poetry]
packages = [{include = "crypto_dashboard", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "autopep8>=2.3.2",
    "pytest>=8.4.1",
    "pytest-aiohttp>=1.1.0",
    "pytest-mock>=3.14.1",
]

[project.scripts]
dashboard = "crypto_dashboard.main:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
